# parking_spaces

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
parks/: config.py  database.py
parks/manage/: __main__.py  migrations.py  server.py  utils.py
parks/migrations/: 20240227_01_mNXbP-initialise.sql  20240227_02_ydmdB-create-carpark-table.sql  20240227_03_fliGq-create-spaces-table.sql  20240227_04_MvBhJ-create-server-response-table.sql  20240308_01_kKWih-create-trigger-to-extract-carpark-spaces-from-server-response.sql  20240308_02_ipLbe-create-historic-weather-forecast-table.sql  20240308_02_ipLbe-create-weather-tables.sql  20240314_01_Vpvt4-add-historic-field-to-weather-table.sql  20240315_01_dpuJV-create-weather-type-table.sql
parks/schemas/: __init__.py  parks.py
parks/schemas/exceptions/: base.py
parks/server/: __init__.py  app.py  app_exceptions.py  http_lookup_codes.py  uvicorn_logging.py
parks/server/frontend/static/css/: styles.css
parks/server/frontend/templates/: index.html
parks/server/routers/v1/: __init__.py  carpark.py  data.py  spaces.py  weather.py
parks_data/: file_uploader.py  get_current_weather.py  get_data.sh  get_historic_weather.py
parks_models/: config.py
parks_models/src/: data_loader.py  data_processing.py  prediction.py  training.py
