[project]
name = "PARKS"
version = "0.1.0"
description = "Predictive Analysis for Real-time Knowledge of Spaces"
authors = [{ name = "Alex Bailey", email = "alexbaileyconsulting@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
  "python-dotenv>=1.0.1",
  "typer>=0.15.2",
  "pytemplate-reverse>=0.0.3",
  "yoyo-migrations>=9.0.0",
  "uvicorn>=0.34.0",
  "fastapi>=0.115.10",
  "sqlalchemy>=2.0.38",
  "sqlmodel>=0.0.23",
  "coloredlogs>=15.0.1",
  "psycopg2-binary>=2.9.10",
  "python-multipart>=0.0.20",
  "jinja2>=3.1.5",
  "scikit-learn>=1.6.1",
  "matplotlib>=3.10.1",
  "ray>=2.44.1",
  "pandas>=2.2.3",
  "ipykernel>=6.29.5",
  "xgboost>=3.0.0",
  "pyarrow>=19.0.1",
]

[project.optional-dependencies]
dev = [
  "pandas>=2.2.3"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parks", "parks_data", "parks_models"]
